Case Study Gap Fix #2

--- a/src/scss/partials/_maincontent.scss
+++ b/src/scss/partials/_maincontent.scss
@@ -244,6 +244,11 @@ main {
 					padding-bottom:0!important;
 				}
 			}
+			.lg-type-img {
+				.lg-placeholder {
+					padding-bottom:0!important;
+				}
+			}
 		}
 		&.awards-press {
 			padding-left:0;
